fix dark theme ad text not visible, fix ad taking up space even if user has premium

--- a/src/app/components/ad/ad.component.scss
+++ b/src/app/components/ad/ad.component.scss
@@ -36,6 +36,7 @@
 	border-top-right-radius: 0px;
 	border-top-left-radius: 0px;
 	padding: 0 4px;
+	color: #222 !important;
 }
 
 @media only screen and (min-width: 320px) {
